Bug 237947 Mozilla Freezes when handling filetypes with an entry in .mailcap that does not exist o) also return from GetFileTokenForPath when the base class implementation failed with NS_ERROR_FILE_NOT_FOUND. o) Do not return NS_ERROR_FILE_NOT_FOUND from the base class impl if the file path is both relative and does not exist in the mozilla directory. o) Make sure to break out of the loop in the unix GetFileTokenForPath even if ApendRelativePath fails

r+sr=bzbarsky a=asa